# PodcastInsight

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md
backend/: .env.example  .env.production.template  Dockerfile  Dockerfile.cn  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 008_reconcile_podcast_episode_summary_status.py  010_pending_summary_and_backlog_indexes.py  014_add_performance_optimization_indexes.py  015_separate_transcript_storage.py  016_add_json_indexes.py  020_widen_session_token_columns.py  024_drop_2fa_columns_and_audit_table.py  1645bdeb3b85_drop_2fa_columns_and_audit_table.py  a5b33fe7c181_initial.py
backend/app/: main.py
backend/app/admin/: audit.py  auth.py  dependencies.py  exception_handlers.py  first_run.py  models.py  router.py  security_settings.py  settings_helpers.py  settings_provider.py  storage_service.py
backend/app/admin/routes/: _shared.py  apikeys.py  dashboard.py  monitoring.py  settings.py  setup_auth.py  subscriptions.py  users_audit.py
backend/app/admin/services/: __init__.py  apikeys_service.py  dashboard_service.py  settings_service.py  setup_auth_service.py  subscriptions_command_service.py  subscriptions_opml_service.py  subscriptions_query_service.py  subscriptions_service.py  users_audit_service.py
backend/app/admin/templates/: 2fa_setup.html  2fa_verify.html  apikeys.html  base.html  dashboard.html  error.html  login.html  monitoring.html  settings.html  setup.html  subscriptions.html  users.html
backend/app/admin/tests/: test_apikey_routes.py  test_settings_service.py  test_subscriptions_command_service.py  test_subscriptions_opml_service.py  test_users_audit_routes.py
backend/app/bootstrap/: cache_warming.py  http.py  lifecycle.py  routers.py
backend/app/core/: ai_client.py  auth.py  cache_ttl.py  celery_app.py  circuit_breaker.py  config.py  database.py  datetime_utils.py  dependencies.py  display_utils.py  exceptions.py  http_client.py  interfaces.py  json_encoder.py  logging_config.py  metrics.py  middleware.py  observability.py  providers.py  rate_limit.py  redis.py  security.py  utils.py  whisper.py
backend/app/core/middleware/: __init__.py  query_analysis.py  rate_limit.py  response_optimization.py
backend/app/core/providers/: __init__.py  admin_providers.py  ai_providers.py  auth_providers.py  base_providers.py  podcast_providers.py  subscription_providers.py
backend/app/core/redis/: __init__.py  cache.py  client.py  lock.py  metrics.py  metrics_collector.py  penetration.py  podcast_cache.py  rate_limit.py  sorted_set.py
backend/app/core/security/: __init__.py  encryption.py  jwt.py  password.py  token_blacklist.py
backend/app/core/tests/: test_cache_penetration.py  test_feed_parser.py  test_http_client_compat.py
backend/app/domains/ai/: __init__.py  dependencies.py  llm_privacy.py  model_testing.py  models.py  repositories.py
backend/app/domains/ai/repositories/: __init__.py
backend/app/domains/ai/services/: __init__.py  base_model_manager.py  model_config_service.py  model_runtime_service.py  text_generation_service.py
backend/app/domains/ai/tests/: test_response_mapper.py
backend/app/domains/content/models/: __init__.py  conversation.py  daily_report.py  highlight.py
backend/app/domains/media/models/: __init__.py  transcript.py  transcription_task.py
backend/app/domains/media/transcription/: converter.py  service.py  transcriber.py  utils.py
backend/app/domains/podcast/: conversation_service.py  episode_projections.py  models.py  playback_queue_projections.py  repositories.py  routes.py  schedule_projections.py  schemas.py  service.py  summary_manager.py  tasks.py  transcription.py  transcription_manager.py  transcription_schedule_projections.py  transcription_scheduler.py  transcription_state.py  transcription_types.py
backend/app/domains/podcast/api/: dependencies.py  episode_route_common.py  response_assemblers.py  routes.py  routes_conversations.py  routes_episode_actions.py  (+11 more)
backend/app/domains/subscription/: models.py
backend/app/domains/summary/: service.py
backend/app/domains/transcription/: models.py  routes.py  schemas.py  service.py  tasks.py
backend/app/domains/user/: models.py  repositories.py
backend/app/http/: decorators.py  errors.py
backend/app/shared/: __init__.py  repository_helpers.py  retry_utils.py  schemas.py  settings_helpers.py
backend/scripts/: rebuild_daily_reports.py
backend/tests/: README.md  check_tasks.py  conftest.py  test_celery_config_snapshot.py  test_podcast_api.py  test_refresh_subscription.py  test_route_snapshot.py  test_runtime_metrics_collector.py  test_subscription_repository_query_optimization.py  test_token_blacklist.py  test_user_routes_error_handling.py
backend/tests/admin/: test_admin_ip_binding.py  test_admin_route_snapshot.py
backend/tests/core/: test_circuit_breaker.py  test_database_pool_snapshot.py  test_exception_handlers.py  test_final_deploy.py  test_logging_config.py  test_metrics_endpoint.py  test_rate_limit_improvements.py  test_rate_limit_middleware.py  test_readiness_endpoint.py  test_redis_healthcheck_behavior.py  test_runtime_imports.py  test_security.py
backend/tests/performance/: locustfile.py  test_api_performance.py
backend/tests/podcast/: test_ai_retry_classification.py  test_e2e_simulation.py  test_episode_status_pending_summary.py  test_feed_count_cache_repository.py  test_feed_lightweight_service.py  test_opml_import_task_status_safety.py  test_playback_repository_play_count.py  test_podcast_repository_query_optimization.py  test_queue_repository.py  test_queue_service.py  test_repository_active_subscription_filters.py  test_secure_rss_parser_limits.py  test_summary_consistency.py  test_task_orchestration_parser_lifecycle.py  test_transcription_chunk_window.py  test_transcription_progress_update.py  test_transcription_state_locking.py
backend/tests/tasks/: test_celery_task_routes.py  test_pending_transcription_task_flow.py  test_summary_task_flow.py  test_task_registry.py  test_transcription_task_flow.py
(+670 files in other folders)
