[project]
name = "personal-ai-assistant-backend"
version = "1.0.0"
description = "Personal AI Assistant Backend API"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "starlette>=0.52.1",
    "uvicorn[standard]>=0.41.0",
    "gunicorn>=25.1.0",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "redis>=7.3.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.22",
    "celery>=5.6.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "aiohttp>=3.13.3",
    "feedparser>=6.0.12",
    "python-dotenv>=1.2.2",
    # Security & Privacy
    "defusedxml>=0.7.1",
    "email-validator>=2.3.0",
    "beautifulsoup4>=4.14.3",
    "aiofiles>=25.1.0",
    "ffmpeg-python>=0.2.0",
    "openai>=2.26.0",
    "jinja2>=3.1.6",
    "itsdangerous>=2.2.0",
    "psutil>=7.2.2",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    # Monitoring & Observability
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "locust>=2.43.3",
    "ruff>=0.15.5",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
# Ruff configuration - replaces black, isort, and flake8
line-length = 88
target-version = "py311"

# Enable auto-fixing for safe rules
fix = true
show-fixes = true

# Exclude directories
extend-exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and other useful rules
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app"]
addopts = "--import-mode=importlib"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "performance: marks performance benchmark tests",
    "load: marks load/concurrency tests",
]
