[project]
name = "poddigest-backend"
version = "1.0.0"
description = "PodDigest - Podcast Knowledge Hub Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "aiohttp>=3.10.0",
    "feedparser>=6.0.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "faster-whisper>=1.1.0",
    "nvidia-cublas-cu12>=12.0.0",
    "nvidia-cudnn-cu12>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
